terraform/modules/vpc/main.tf
############################################
# VPC
############################################

resource "aws_vpc" "this" {

  cidr_block = var.vpc_cidr

  enable_dns_support = true

  enable_dns_hostnames = true

  tags = {

    Name = "${var.project_name}-vpc"

    Environment = var.environment

  }

}

############################################
# Internet Gateway
############################################

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = {

    Name = "${var.project_name}-igw"

    Environment = var.environment

  }

}

############################################
# Public Subnet
############################################

resource "aws_subnet" "public" {

  vpc_id = aws_vpc.this.id

  cidr_block = var.public_subnet_cidr

  availability_zone = var.availability_zone

  map_public_ip_on_launch = true

  tags = {

    Name = "${var.project_name}-public-subnet"

    Environment = var.environment

  }

}

############################################
# Private Subnet
############################################

resource "aws_subnet" "private" {

  vpc_id = aws_vpc.this.id

  cidr_block = var.private_subnet_cidr

  availability_zone = var.availability_zone

  map_public_ip_on_launch = false

  tags = {

    Name = "${var.project_name}-private-subnet"

    Environment = var.environment

  }

}

############################################
# Elastic IP for NAT Gateway
############################################

resource "aws_eip" "nat" {

  domain = "vpc"

  tags = {

    Name = "${var.project_name}-nat-eip"

    Environment = var.environment

  }

  depends_on = [

    aws_internet_gateway.this

  ]

}

############################################
# NAT Gateway
############################################

resource "aws_nat_gateway" "this" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public.id

  tags = {

    Name = "${var.project_name}-nat-gateway"

    Environment = var.environment

  }

  depends_on = [

    aws_internet_gateway.this

  ]

}

############################################
# Public Route Table
############################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id

  }

  tags = {

    Name = "${var.project_name}-public-rt"

    Environment = var.environment

  }

}

############################################
# Private Route Table
############################################

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.this.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.this.id

  }

  tags = {

    Name = "${var.project_name}-private-rt"

    Environment = var.environment

  }

}

############################################
# Public Route Table Association
############################################

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}

############################################
# Private Route Table Association
############################################

resource "aws_route_table_association" "private" {

  subnet_id = aws_subnet.private.id

  route_table_id = aws_route_table.private.id

}
